Add AdSense verification: script, meta tag, and ads.txt in root

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta name="language" content="English">
     <meta name="geo.region" content="US">
     <meta name="geo.placename" content="United States">
-    <meta name="theme-color" content="#8B4CBF">
-    <meta name="msapplication-TileColor" content="#8B4CBF">
+    <meta name="theme-color" content="#9B59B6">
+    <meta name="msapplication-TileColor" content="#9B59B6">
     <meta name="msapplication-config" content="assets/browserconfig.xml">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -34,8 +34,10 @@
     <!-- Google Analytics 4 - Configure in brand-config.js when ready -->
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script> -->
     
-    <!-- Google AdSense - Configure in brand-config.js when ready -->
-    <!-- <meta name="google-adsense-account" content="ca-pub-XXXXXXXX"> -->
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-2743300891813268">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2743300891813268"
+     crossorigin="anonymous"></script>
     
     <!-- Content Security Policy -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https:; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://pagead2.googlesyndication.com https://www.googletagmanager.com https://www.google-analytics.com https://googleads.g.doubleclick.net https://ep1.adtrafficquality.google https://ep2.adtrafficquality.google https://www.google.com https://fundingchoicesmessages.google.com https://unpkg.com https://esm.sh; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://api.openai.com https://googleads.g.doubleclick.net https://ep1.adtrafficquality.google https://ep2.adtrafficquality.google https://www.google.com https://www.google-analytics.com https://fundingchoicesmessages.google.com https://*.supabase.co https://*.supabase.com https://www.google.co.nz https://www.googleadservices.com; frame-src 'self' https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://ep1.adtrafficquality.google https://ep2.adtrafficquality.google https://www.google.com https://fundingchoicesmessages.google.com https://www.googletagmanager.com;">
@@ -170,9 +172,9 @@
         <header class="header">
             <div class="hero-grid">
                 <div class="hero-content">
-                    <p class="hero-eyebrow">Inclusive tarot guidance · Available 24/7</p>
+                    <p class="hero-eyebrow">🌈 Inclusive tarot guidance · Available 24/7</p>
                     <h1 class="hero-title">Discover your path with confidence and pride.</h1>
-                    <p class="hero-subtitle">Get instant AI-powered tarot readings in a safe, inclusive space. Share your journey with friends who understand.</p>
+                    <p class="hero-subtitle">Get instant AI-powered tarot readings in a safe, welcoming space designed for the LGBTI community. Share your journey with friends who understand.</p>
                     <div class="hero-actions">
                         <button class="hero-cta" type="button" data-scroll-target="#readingForm">
                             <span class="material-icons" aria-hidden="true">auto_fix_high</span>
