Add Google Analytics 4 (G-FXZTKK2YP8) for Dorothy Tarot

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
   
-    <!-- Google Analytics 4 - Configure in brand-config.js when ready -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script> -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FXZTKK2YP8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FXZTKK2YP8');
+    </script>
     
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-2743300891813268">
