Fix deployment errors: Improve error handling for missing brand-config.js and invalid API keys
- Add graceful error handling for missing brand-config.js in index.html
- Improve fallback configuration in config.js with better warnings
- Enhance ChatGPT integration error handling with specific 401 detection
- Add user-friendly error messages instead of generic network errors
- Create comprehensive DEPLOYMENT_FIXES.md guide
- Better distinction between CORS and authentication errors

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
     </div>
 
     <!-- Brand Configuration (must load first) - Dorothy Tarot -->
-    <script src="js/brand-config.js"></script>
+    <script src="js/brand-config.js" onerror="console.warn('⚠️ brand-config.js not found. Using fallback configuration from config.js');"></script>
     
     <!-- Scripts -->
     <script src="js/tarot-data.js"></script>
